--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -7,5 +7,6 @@ url('https://fonts.googleapis.com/css2?family=Kalam&family=Merriweather&family=M
 }
 
 .about{
-    padding: 5%;
+    max-width: 1000px;
+    font-size: 18px;
 }
